hphp/hack/test/typecheck/reified_generics/valid_targ_dynamic.php
<?hh

class C<reify T> {}

type Ty = C<dynamic>;
